# optimystic

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  config.hpp.in
cmake/: CodeCoverage.cmake  DownloadProject.CMakeLists.cmake.in  DownloadProject.cmake  FindCPLEX.cmake  FindGUROBI.cmake
src/: CMakeLists.txt  constraint.cpp  constraint.hpp  gurobienv.hpp  model.cpp  model.hpp  variable.cpp  variable.hpp
test/: CMakeLists.txt
test/src/: CMakeLists.txt  modeltest.cpp
